# crewai_knowledge_chatbot

./: .gitignore  pyproject.toml  requirements.txt
src/crewai_knowledge_chatbot/: crew.py  main.py  models.py
src/crewai_knowledge_chatbot/config/: agents.yaml  tasks.yaml
