[project]
name = "crewai_knowledge_chatbot"
version = "0.1.0"
description = "crewai_knowledge_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "gradio>=5.20.0",
    "groq>=0.18.0",
    "gtts>=2.5.4",
    "langchain-groq>=0.2.5",
    "litellm>=1.60.2",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pyttsx3>=2.98",
    "sounddevice>=0.5.1",
    "torch>=2.6.0",
]

[project.scripts]
crewai_knowledge_chatbot = "crewai_knowledge_chatbot.main:run"
run_crew = "crewai_knowledge_chatbot.main:run"
train = "crewai_knowledge_chatbot.main:train"
replay = "crewai_knowledge_chatbot.main:replay"
test = "crewai_knowledge_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
